# Crypto

./: .dockerignore  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
ci-cd/dockerfiles/: crypto.dockerfile
src/: lifespan.py  main.py
src/alerts/: models.py  router.py  schemas.py  service.py
src/common/: __init__.py  models.py
src/config/: main.py
src/config/env_config/: __init__.py  database.py
src/database/: session.py
src/prices/: collector.py  constants.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/tests/prices/: test__prices.py
